# csr-mcp-benchmark

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  project-state.md  pyproject.toml
eval_set/: build_candidates.py  candidates.json  eval.jsonl  finalize.py
ingest/: build_index.py  chunker.py  download.py
server/: main.py
