[project]
name = "csr-mcp-benchmark"
version = "0.1.0"
description = "Citation Survival Rate benchmark — measuring source attribution through the MCP tool boundary"
requires-python = ">=3.12"
dependencies = [
    # MCP server (FastMCP wraps the MCP Python SDK)
    "fastmcp==3.4.2",

    # Vector index
    "chromadb==1.5.9",

    # NLI + embedding inference (CrossEncoder for DeBERTa NLI; SentenceTransformer for BGE)
    "sentence-transformers==5.6.0",
    "torch==2.12.1",

    # Agent framework: LangGraph + MCP adapter
    "langchain-mcp-adapters==0.3.0",
    "langgraph==1.2.6",
    "langchain-openai==1.3.3",

    # Agent framework: OpenAI Agents SDK (MCPServerStreamableHttp)
    "openai-agents==0.17.7",

    # LLM providers
    "openai==2.44.0",       # gpt-4o-mini (frontier model + claim decomposition)
    "anthropic==0.112.0",   # Anthropic (strategy pattern, spot-check)
    "httpx==0.28.1",        # OpenRouter calls (nvidia/nemotron free model)

    # Infra
    "python-dotenv==1.2.2",
    "diskcache==5.6.3",     # LLM + NLI output caching (mandatory from day one)
]

[tool.uv]
# uv.lock is committed — it provides the exact reproducible pin tree.
# pyproject.toml above pins the versions we tested; uv.lock pins every transitive dep.
